# xpBtcPythonMod04

./: README.md  pyproject.toml
src/: aula01.ipynb  aulaPraticaArvoreDecisao.ipynb  aulaPraticaConcorrenteAssincrona.ipynb  aulaPraticaKmeans.ipynb  aulaPraticaLockAsync.ipynb  aulaPraticaProgramacaoReativa.ipynb  aulaPraticaRedeNeuralMLP.ipynb  aulaPraticaRegressaoLogistica.ipynb  aulaPraticaSVM.ipynb  aulaPraticaThreads.ipynb
