[tool.poetry]
name = "xpbtcpythonmod04"
version = "0.1.0"
description = ""
authors = ["frzanini <frzanini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
plotly = "^5.19.0"
nbformat = "5.1.2"
rx = "^3.2.0"
nest-asyncio = "^1.6.0"
aiohttp = "^3.9.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
